--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "url": "https://github.com/creativetimofficial/pk2-angular.git"
   },
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
-    "start": "ng serve --open",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -17,8 +18,10 @@
   },
   "dependencies": {
     "@angular/animations": "9.0.6",
+    "@angular/cli": "9.0.6",
     "@angular/common": "9.0.6",
     "@angular/compiler": "9.0.6",
+    "@angular/compiler-cli": "9.0.6",
     "@angular/core": "9.0.6",
     "@angular/forms": "9.0.6",
     "@angular/http": "7.2.16",
@@ -29,13 +32,16 @@
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "bootstrap": "4.1.2",
     "core-js": "3.6.4",
+    "express": "^4.17.1",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "2.0.1",
     "ng2-nouislider": "1.7.12",
     "nouislider": "9.2.0",
+    "path": "^0.12.7",
     "popper.js": "1.14.4",
     "rxjs": "6.5.4",
     "rxjs-compat": "6.5.4",
+    "typescript": "3.7.5",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
@@ -46,6 +52,7 @@
     "@types/jasmine": "3.5.9",
     "@types/node": "13.9.1",
     "codelyzer": "5.2.1",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.4.1",
@@ -58,5 +65,9 @@
     "ts-node": "3.0.4",
     "tslint": "6.1.0",
     "typescript": "3.7.5"
+  },
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.14.4"
   }
 }
