--- a/package.json
+++ b/package.json
@@ -2,19 +2,15 @@
   "name": "paper-kit-2-angular",
   "version": "1.3.0",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/creativetimofficial/pk2-angular.git"
-  },
   "scripts": {
-    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "heroku-postbuild": "ng build --prod"
   },
   "dependencies": {
     "@angular/animations": "9.0.6",
