--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-    "heroku-postbuild": "ng build --prod"
+    
+    "postinstall": "ng build --aot --target=production"
+    
   },
   "dependencies": {
     "@angular/animations": "9.0.6",
@@ -42,8 +44,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.6",
-    "@angular/cli": "9.0.6",
-    "@angular/compiler-cli": "9.0.6",
+    
+    
     "@angular/language-service": "9.0.6",
     "@types/jasmine": "3.5.9",
     "@types/node": "13.9.1",
@@ -59,8 +61,8 @@
     "karma-jasmine-html-reporter": "1.5.2",
     "protractor": "5.4.3",
     "ts-node": "3.0.4",
-    "tslint": "6.1.0",
-    "typescript": "3.7.5"
+    "tslint": "6.1.0"
+    
   },
   "engines": {
     "node": "12.16.3",
