--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --target=production"
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    
+    "postinstall": "ng build --aot"
+    
   },
   "dependencies": {
     "@angular/animations": "9.0.6",
@@ -41,6 +44,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.6",
+    
+    
     "@angular/language-service": "9.0.6",
     "@types/jasmine": "3.5.9",
     "@types/node": "13.9.1",
@@ -57,6 +62,7 @@
     "protractor": "5.4.3",
     "ts-node": "3.0.4",
     "tslint": "6.1.0"
+    
   },
   "engines": {
     "node": "12.16.3",
